--- a/darbas 09.19/pages/three.html
+++ b/darbas 09.19/pages/three.html
@@ -18,7 +18,7 @@
     <div class="main">
         <div class="maintext">
             <b>INGREDIENTAI: </b><br>
-            <h6>Porcijų skaičius: 6</h6><br>
+            <h6>Porcijų skaičius: 6</h6>
             500 gramų vištienos šlaunelių mėsos (be odos ir kaulų)<br>
             500 mililitrų pieno<br>
             2 vienetai poro<br>
